<resources>
    <string name="app_name">Banking</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="forgot_password">Forgot password?</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_accounts">Accounts</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_paybills">Pay Bills</string>
    <string name="title_activity_transfers">Transfers</string>

    <string name="chequing_balance">$10,402.16</string>
    <string name="chequing">Advanced Chequing</string>
    <string name="savings_balance">$256,402.16</string>
    <string name="savings">Personal Savings</string>

    <string name="accounts">Accounts</string>
    <string name="pay_bills">Pay Bills</string>
    <string name="transfers">Transfers</string>
    <string name="deposit">Deposit</string>
    <string name="find_us">Find Us</string>
    <string name="contact_us">Contact Us</string>

    <string-array name="accounts">
        <item>0003 - Personal Savings</item>
        <item>0007 - Advanced Chequing</item>
        <item>2007 - High Interest Savings</item>
    </string-array>

    <string name="transaction_info">Showing transactions for the last 15 days.</string>

    <string name="price1">-$2.60</string>
    <string name="price2">-$5.20</string>
    <string name="price3">+274.32</string>
    <string name="price4">-$2.60</string>
    <string name="price5">-$2.60</string>

    <string name="desc1">Cookie Store</string>
    <string name="desc2">Cookie Store</string>
    <string name="desc3">Direct Deposit</string>
    <string name="desc4">Cookie Store</string>
    <string name="desc5">Cookie Store</string>

    <string name="date1">October 9th, 2015</string>
    <string name="date2">October 7th, 2015</string>
    <string name="date3">October 4th, 2015</string>
    <string name="date4">September 29th, 2015</string>
    <string name="date5">September 28th, 2015</string>

    <string name="balance1">$256,402.16</string>
    <string name="balance2">$256,404.76</string>
    <string name="balance3">$256,409.96</string>
    <string name="balance4">$256,135.64</string>
    <string name="balance5">$256,133.04</string>

    <string name="from_text">From:</string>
    <string name="to_text">To: </string>
    <string name="amount_text">Amount: </string>

    <string-array name="grantees">
        <item>VISA - ************3742</item>
        <item>BCIT - Tuition Payments</item>
        <item>D\'Arcy</item>
    </string-array>

    <string name="pay">Pay Now</string>

    <string name="transfer">Transfer Now</string>
    <string name="title_activity_contact_us">ContactUs</string>

    <string name="desc">Bank Contact Information</string>
    <string name="phone_label">Phone Number:</string>
    <string name="toll_label">Toll-free Number:</string>
    <string name="address_label">Branch 1 Address:</string>
    <string name="city_label">City:</string>
    <string name="postal_label">Postal Code:</string>
    <string name="hours_label">Branch Hours:</string>
    <string name="phone">(604) 555-2939</string>
    <string name="toll">(+1) 888-555-2939</string>
    <string name="address">14655 Walnut Ave.</string>
    <string name="city">Candyland</string>
    <string name="postal">V4D 5E3</string>
    <string name="hours">9am - 5pm Monday - Friday</string>
</resources>
