<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="a00925723.comp3717.bcit.ca.banking.Home">

    <HorizontalScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/balance_layout"
    android:fillViewport="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/chequing_layout"
                android:background="#212121"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/chequing_balance"
                    android:textColor="#fff"
                    android:textSize="50dp"
                    android:drawableRight="@drawable/ic_keyboard_arrow_right_white_24dp"
                    android:id="@+id/chequing_balance"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/chequing"
                    android:textColor="#ffffff"
                    android:id="@+id/savings"
                    android:layout_below="@+id/chequing_balance"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/savings_layout"
                android:background="#212121"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/savings_balance"
                    android:textColor="#fff"
                    android:textSize="50dp"
                    android:drawableLeft="@drawable/ic_keyboard_arrow_left_white_24dp"
                    android:id="@+id/savings_balance"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/savings"
                    android:textColor="#ffffff"
                    android:id="@+id/chequeing"
                    android:layout_below="@+id/savings_balance"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
        </LinearLayout>
    </HorizontalScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/balance_layout">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:drawablePadding="40dp"
                android:gravity="left|center_vertical"
                android:text="@string/accounts"
                android:id="@+id/accounts"
                android:onClick="accounts"
                android:textColor="#212121"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/flat_button"
                android:drawableLeft="@drawable/ic_account_balance_black_24dp"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:drawablePadding="40dp"
                android:gravity="left|center_vertical"
                android:text="@string/pay_bills"
                android:id="@+id/pay_bills"
                android:onClick="payBills"
                android:textColor="#212121"
                android:layout_gravity="center_horizontal"
                android:drawableLeft="@drawable/ic_payment_black_24dp"
                android:background="@drawable/flat_button"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:drawablePadding="40dp"
                android:gravity="left|center_vertical"
                android:text="@string/transfers"
                android:id="@+id/transfers"
                android:drawableLeft="@drawable/ic_swap_vert_black_24dp"
                android:textColor="#212121"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/flat_button"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="transfers"
                android:nestedScrollingEnabled="false" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:drawablePadding="40dp"
                android:gravity="left|center_vertical"
                android:text="@string/deposit"
                android:id="@+id/deposit"
                android:onClick="deposit"
                android:textColor="#212121"
                android:layout_gravity="center_horizontal"
                android:drawableLeft="@drawable/ic_play_for_work_black_24dp"
                android:background="@drawable/flat_button"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:drawablePadding="40dp"
                android:gravity="left|center_vertical"
                android:text="@string/find_us"
                android:id="@+id/find_us"
                android:onClick="findUs"
                android:textColor="#212121"
                android:layout_gravity="center_horizontal"
                android:drawableLeft="@drawable/ic_room_black_24dp"
                android:background="@drawable/flat_button"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:drawablePadding="40dp"
                android:gravity="left|center_vertical"
                android:text="@string/contact_us"
                android:id="@+id/contact_us"
                android:onClick="contactUs"
                android:textColor="#212121"
                android:layout_gravity="center_horizontal"
                android:drawableLeft="@drawable/ic_phone_black_24dp"
                android:background="@drawable/flat_button"
                style="?android:attr/borderlessButtonStyle" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
