<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/username_input"
        android:background="@android:drawable/editbox_background" >

        <TextView
            android:id="@+id/username_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical|center_horizontal"
            android:textStyle="bold"
            android:textColor="#C0C0C0"
            android:text="@string/username"
            android:background="@android:color/transparent" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/username_text"
            android:textColor="#000000"
            android:gravity="right|center_vertical"
            android:background="@android:color/transparent"
            android:paddingLeft="5dp"
            android:text="" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/username_input"
        android:id="@+id/password_input"
        android:background="@android:drawable/editbox_background" >

        <TextView
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical|center_horizontal"
            android:textStyle="bold"
            android:textColor="#C0C0C0"
            android:text="@string/password"
            android:background="@android:color/transparent" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/password_text"
            android:textColor="#000000"
            android:gravity="right|center_vertical"
            android:inputType="textPassword"
            android:background="@android:color/transparent"
            android:paddingLeft="5dp"
            android:text="" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/forgot_password"
        android:id="@+id/forgot_password"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/password_input"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/login"
        android:textColor="#fff"
        android:id="@+id/login"
        android:onClick="login"
        android:layout_below="@+id/forgot_password"
        android:background="@drawable/login_button"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
